# gpu-jason

./: .gitignore  ARCHITECTURE.md  README.md  WORKPLAN.md  aggregate_strategy.py  benchmark_gpu_v4.py  check_current_strat.py  compare_solvers.py  compute_aggregate_ev.py  configurations.json  cpu_turn_cfr_reference.py  debug_aa.py  debug_cpu_evs.py  debug_current_vs_avg.py  debug_ev_scale.py  debug_ev_trace.py  debug_gpu_iteration.py  debug_hands.py  debug_infosets.py  debug_kernel.py  debug_kernel_evs.py  debug_kernel_evs2.py  debug_kernel_evs3.py  debug_matching_deals.py  debug_minimal_cfr.py  debug_node1_evs.py  debug_node_mapping.py  debug_regret_per_deal.py  debug_regrets.py  debug_river_regret_scale.py  debug_strategy.py  debug_turn_cfr.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_custom_toy.py  test_turn_game.py  test_turn_solver.py  trace_node2_response.py  verify_ev.py  (+1 more)
docs/: BLOCKERS.md  CURRENT_STATE.md  DECISIONS.md  NEXT_SESSION.md
gpu_poker_cfr/: __init__.py
gpu_poker_cfr/engine/: __init__.py  backend.py  ops.py
gpu_poker_cfr/games/: __init__.py  base.py  cards.py  custom_river_toy.py  hand_eval.py  kuhn.py  leduc.py  river_game.py  river_toy.py  turn_toy_game.py
gpu_poker_cfr/matrix/: __init__.py  builder.py  sparse.py
gpu_poker_cfr/solvers/: __init__.py  vanilla.py  (+21 more)
tests/: __init__.py  test_architecture.py  test_backend.py  test_cfr_plus.py  test_imports.py  test_kuhn.py  test_kuhn_nash_regression.py  test_matrices.py  test_openspiel.py  test_ops.py  test_semi_vector_leduc.py  test_semi_vector_mccfr.py  test_vanilla_cfr.py
(+3 files in other folders)
